cache e relatorio topicos

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,8 @@
 spring:
+  main:
+    allow-circular-references: true
+  flyway:
+    depends-on: entityManagerFactory
   datasource:
     driverClassName: org.h2.Driver
     url: jdbc:h2:mem:forum
@@ -6,8 +10,10 @@ spring:
     password: toddy
   jpa:
     database-platform: org.hibernate.dialect.H2Dialect
-    defer-datasource-initialization: 'true'
     properties:
       hibernate:
         show_sql: true
         format_sql: true
+  h2:
+    console:
+      enabled: true
